--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -250,6 +250,8 @@ Then, regarding a collected list of constraint types (requirements), we classify
 
 \section{Introduction}
 
+\tb{example for RDF validation (see comments in tex)}
+
 %Example for RDF validation, really oriented at a real scenario. 
 %For example, a library wants to publish some datasets as
 %RDF by extracting them from different relational databases. In order to
@@ -266,6 +268,8 @@ Then, regarding a collected list of constraint types (requirements), we classify
 %like this darth vader stuff, however, it is better to have some real
 %usecase in mind otherwise people always think this is only relevant for
 %such toy examples.
+
+%research data / library data / institutions exchanging data
 
 For many RDF applications, the formulation of constraints and the automatic validation of data according to these constraints is a much sought-after feature. 
 In 2013, the W3C invited experts from industry, government, and academia to the RDF Validation Workshop\footnote{\url{http://www.w3.org/2012/12/RDF-val/}}, 
