real library domain running examples

--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -257,11 +257,7 @@ generic level written down some natural language sentences.  Now it
 needs to be decided which formalism to use in order to formally express
 these constraints and to check their validity. Moreover, it needs to be
 clarified what role reasoning play in this verification and publication
-process. This will perfectly fit as motivation for the contribution of
-the paper and the example can be easily be used at other places of the
-paper.
-I would then always come back to the running example from the beginning
-and always use constraints that would fit to this scenario. 
+process. 
 
 basic constraints to achieve high data quality:
 \begin{itemize}
